--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   // the link to your model provided by Teachable Machine export panel
   const URL = "https://teachablemachine.withgoogle.com/models/FrOOBX9IT/";
   //사운드 모델 링크
-  const URL2 = "https://teachablemachine.withgoogle.com/models/qfkXJ8eTm/";
+  const URL2 = "https://teachablemachine.withgoogle.com/models/-lLEdYTP0/";
   //이미지 모델 링크
 
   async function createModel() {
